scripts/nullaway/annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8.txt
../annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:52: error: [NullAway] dereferenced expression workingAccount is @Nullable
        workingAccount.setState(CheckableAccount.AccountState.CHECKED);
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:58: error: [NullAway] dereferenced expression this.accounts.get(accountId) is @Nullable
        return this.accounts.get(accountId).getAccountState();
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:62: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.accounts.get(id);
        ^
    (see http://t.uber.com/nullaway )
../annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:120: error: [NullAway] dereferenced expression this.currentAccount is @Nullable
        return this.currentAccount.getAvailableMoney();
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:160: error: [NullAway] dereferenced expression this.currentAccountProxy is @Nullable
                this.currentAccountProxy.releaseCashierInterface();
                                        ^
    (see http://t.uber.com/nullaway )
5 errors
